--- a/careportsapp/src/app/support-active-item/support-active-item.component.css
+++ b/careportsapp/src/app/support-active-item/support-active-item.component.css
@@ -23,5 +23,6 @@
 :host /deep/ ng2-st-tbody-edit-delete {margin: 3px;}
 :host /deep/ .ng2-smart-action-custom-custom{margin: 3px;}
 
+.highlightObservado{ color: red; }
 
 
