--- a/careportsapp/src/app/support-all-item/support-all-item.component.html
+++ b/careportsapp/src/app/support-all-item/support-all-item.component.html
@@ -98,6 +98,8 @@
                       <option value="Pralaysankar Saha">Pralaysankar Saha</option>
                       <option value="Vivek Sen">Vivek Sen</option>
                       <option value="Tuhin Ghosh">Tuhin Ghosh</option>
+                      <option value="Rajarshi Mandal">Rajarshi Mandal</option>
+                      <option value="Abir Bhowmick">Abir Bhowmick</option>
                     </select>                
                   </div>
                   <div class="col-sm-2 m-b-xs">
