--- a/careportsapp/src/app/app.component.html
+++ b/careportsapp/src/app/app.component.html
@@ -57,14 +57,20 @@
               </li>
               <li>
                 <a routerLink="/view-item" routerLinkActive="active">
-                  <i class="fa fa-calendar" aria-hidden="true"></i>
-                  <span>All Item</span>
+                  <i class="fa fa-phone-square" aria-hidden="true"></i>
+                  <span>All Calls</span>
                 </a>
               </li>
               <li>
                 <a routerLink="/support-active-item" routerLinkActive="active">
-                  <i class="fa fa-users" aria-hidden="true"></i>
-                  <span>Active Item</span>
+                  <i class="fa fa-phone" aria-hidden="true"></i>
+                  <span>Active Calls</span>
+                </a>
+              </li>
+              <li>
+                <a routerLink="/dev-all-items" routerLinkActive="active">
+                  <i class="fa fa-tasks" aria-hidden="true"></i>
+                  <span>Dev Items</span>
                 </a>
               </li>
               
